force-app/main/default/objects/DHKT_Request__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <formula>Student__r.Activity_Class__r.Name</formula>
    <label>Class</label>
    <type>Text</type>
</CustomField>