force-app/main/default/objects/DHKT_Request__c/fields/Cumulative_Credits__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Credits__c</fullName>
    <label>Cumulative Credits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>