force-app/main/default/objects/DHKT_Request__c/fields/Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth__c</fullName>
    <formula>Student__r.Date_of_Birth__c</formula>
    <label>Day of Birth</label>
    <type>Date</type>
</CustomField>