force-app/main/default/objects/DHKT_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Student__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>