force-app/main/default/objects/DHKT_Request__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>DHKT_Faculty__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>