force-app/main/default/objects/DHKT_Request__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <formula>Faculty__r.Name</formula>
    <label>Faculty</label>
    <type>Text</type>
</CustomField>