force-app/main/default/objects/DHKT_Request__c/fields/Is_My_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Request__c</fullName>
    <formula>CreatedBy.Username = $User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Request</label>
    <type>Checkbox</type>
</CustomField>