force-app/main/default/objects/DHKT_Request__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Student__r.Phone_Number__c</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>