force-app/main/default/objects/DHKT_Request__c/fields/Report_Registration_Method__c.field-meta.xml
<CustomField>
    <fullName>Report_Registration_Method__c</fullName>
    <label>Report Registration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internship Report</fullName>
            </value>
            <value>
                <fullName>Thesis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>