force-app/main/default/objects/DHKT_Request__c/fields/Request_Header__c.field-meta.xml
<CustomField>
    <fullName>Request_Header__c</fullName>
    <label>Request Header</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Request_Header</valueSetName>
    </valueSet>
</CustomField>