force-app/main/default/objects/DHKT_Request__c/fields/Submitting_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Date__c</fullName>
    <label>Submitting Date</label>
    <type>Date</type>
</CustomField>