force-app/main/default/objects/DHKT_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Requests</label>
</ListView>