force-app/main/default/objects/DHKT_Request__c/listViews/Submitted_Requests.listView-meta.xml
<ListView>
    <fullName>Submitted_Requests</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Header__c</columns>
    <columns>Submitting_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Requests</label>
</ListView>